--- a/languages/en.xml
+++ b/languages/en.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <language xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com/XSD/language.xsd" languagecode="en">
 	<category name="wcf.user.profile">
-		<item name="wcf.user.profile.userprofilesetannoy"><![CDATA[Unbeliebter Benutzer setzen]]></item>
-		<item name="wcf.user.profile.userprofiledeleteannoy"><![CDATA[Unbeliebter Benutzer aufheben]]></item>
+		<item name="wcf.user.profile.userprofilesetannoy"><![CDATA[Set "Unpopular user"]]></item>
+		<item name="wcf.user.profile.userprofiledeleteannoy"><![CDATA[Unset "Unpopular User"]]></item>
+	</category>
+	<category name="wcf.acp.group">
+		<item name="wcf.acp.group.option.admin.user.canAnnoyUser"><![CDATA[Can mark users as "unpopular"]]></item>
+		<item name="wcf.acp.group.option.admin.user.canAnnoyUser.description"><![CDATA[Members of this group can mark user as "unpoular".]]></item>
 	</category>
 </language>
