Höllenqualen wird er erleiden!

--- a/languages/en.xml
+++ b/languages/en.xml
@@ -8,4 +8,22 @@
 		<item name="wcf.acp.group.option.admin.user.canAnnoyUser"><![CDATA[Can mark users as "unpopular"]]></item>
 		<item name="wcf.acp.group.option.admin.user.canAnnoyUser.description"><![CDATA[Members of this group can mark user as "unpoular".]]></item>
 	</category>
+	<category name="wcf.acp.option">
+		<item name="wcf.acp.option.category.annoy"><![CDATA[Unbeliebte Benutzer]]></item>
+		<item name="wcf.acp.option.category.annoy.description"><![CDATA[]]></item>
+		<item name="wcf.acp.option.category.portal.general"><![CDATA[Allgemeine Einstellungen]]></item>
+		<item name="wcf.acp.option.category.annoy.general.description"><![CDATA[]]></item>
+		<item name="wcf.acp.option.annoy_slow_min"><![CDATA[Minimale Verzögerung "Slow motion"]]></item>
+		<item name="wcf.acp.option.annoy_slow_min.description"><![CDATA[]]></item>
+		<item name="wcf.acp.option.annoy_slow_max"><![CDATA[Maximale Verzögerung "Slow motion"]]></item>
+		<item name="wcf.acp.option.annoy_slow_max.description"><![CDATA[Die Funktion "Slow Motion" verlängert die Ladezeit der Seiten für den betroffenen User. Angabe in Sekunden, 0 = deaktiviert.]]></item>
+		<item name="wcf.acp.option.annoy_blank_percentage"><![CDATA[Funktion "Snow Storm"]]></item>
+		<item name="wcf.acp.option.annoy_blank_percentage.description"><![CDATA[Die Funktion "Snow Storm" zeigt dem User eine weiße Seite. Angabe "Auftreten in Prozent", 0 = deaktiviert.]]></item>
+		<item name="wcf.acp.option.annoy_logout_percentage"><![CDATA[Funktion "Damn cookies!"]]></item>
+		<item name="wcf.acp.option.annoy_logout_percentage.description"><![CDATA[Die Funktion "Damn cookies!" loggt den User nach dem Zufallsprinzip aus. Angabe "Auftreten in Prozent", 0 = deaktiviert.]]></item>
+		<item name="wcf.acp.option.annoy_redirect_percentage"><![CDATA[Funktion "The Link is broken, dude!"]]></item>
+		<item name="wcf.acp.option.annoy_redirect_percentage.description"><![CDATA[Die Funktion "The Link is broken, dude!" befördert den User Schnurstracks auf die Startseite. Angabe "Auftreten in Prozent", 0 = deaktiviert.]]></item>
+		<item name="wcf.acp.option.annoy_gzip_percentage"><![CDATA[Funktion "Holy crap!"]]></item>
+		<item name="wcf.acp.option.annoy_gzip_percentage.description"><![CDATA[Die Funktion "Holy Crap!" zeigt dem User die Aufgerufene Seite in wilden "Hieroglyphen" an. Angabe "Auftreten in Prozent", 0 = deaktiviert.]></item>
+	</category>
 </language>
