--- a/languages/en.xml
+++ b/languages/en.xml
@@ -9,21 +9,21 @@
 		<item name="wcf.acp.group.option.admin.user.canAnnoyUser.description"><![CDATA[Members of this group can mark user as "unpoular".]]></item>
 	</category>
 	<category name="wcf.acp.option">
-		<item name="wcf.acp.option.category.annoy"><![CDATA[Unbeliebte Benutzer]]></item>
-		<item name="wcf.acp.option.category.annoy.description"><![CDATA[]]></item>
-		<item name="wcf.acp.option.category.annoy.general"><![CDATA[Allgemeine Einstellungen]]></item>
-		<item name="wcf.acp.option.category.annoy.general.description"><![CDATA[]]></item>
-		<item name="wcf.acp.option.annoy_slow_min"><![CDATA[Min. Verzögerung "Slow motion"]]></item>
-		<item name="wcf.acp.option.annoy_slow_min.description"><![CDATA[]]></item>
-		<item name="wcf.acp.option.annoy_slow_max"><![CDATA[Max. Verzögerung "Slow motion"]]></item>
-		<item name="wcf.acp.option.annoy_slow_max.description"><![CDATA[Die Funktion "Slow Motion" verlängert die Ladezeit der Seiten für den betroffenen User. Angabe in Sekunden, 0 = deaktiviert.]]></item>
-		<item name="wcf.acp.option.annoy_blank_percentage"><![CDATA[Funktion "Snow Storm"]]></item>
-		<item name="wcf.acp.option.annoy_blank_percentage.description"><![CDATA[Die Funktion "Snow Storm" zeigt dem User eine weiße Seite. Angabe "Auftreten in Prozent", 0 = deaktiviert.]]></item>
-		<item name="wcf.acp.option.annoy_logout_percentage"><![CDATA[Funktion "Damn cookies!"]]></item>
-		<item name="wcf.acp.option.annoy_logout_percentage.description"><![CDATA[Die Funktion "Damn cookies!" loggt den User nach dem Zufallsprinzip aus. Angabe "Auftreten in Prozent", 0 = deaktiviert.]]></item>
-		<item name="wcf.acp.option.annoy_redirect_percentage"><![CDATA[Funktion "The Link is broken, dude!"]]></item>
-		<item name="wcf.acp.option.annoy_redirect_percentage.description"><![CDATA[Die Funktion "The Link is broken, dude!" befördert den User Schnurstracks auf die Startseite. Angabe "Auftreten in Prozent", 0 = deaktiviert.]]></item>
-		<item name="wcf.acp.option.annoy_gzip_percentage"><![CDATA[Funktion "Holy crap!"]]></item>
-		<item name="wcf.acp.option.annoy_gzip_percentage.description"><![CDATA[Die Funktion "Holy Crap!" zeigt dem User die Aufgerufene Seite in wilden "Hieroglyphen" an. Angabe "Auftreten in Prozent", 0 = deaktiviert.]]></item>
+		<item name="wcf.acp.option.category.annoy"><![CDATA[Unpopular user]]></item>
+		<item name="wcf.acp.option.category.annoy.description"><![CDATA[Annoy unpopular user]]></item>
+		<item name="wcf.acp.option.category.portal.general"><![CDATA[General settings]]></item>
+		<item name="wcf.acp.option.category.annoy.general.description"><![CDATA[Set general settings for "Unpopular user"]]></item>
+		<item name="wcf.acp.option.annoy_slow_min"><![CDATA[Minimum delay "Slow Motion"]]></item>
+		<item name="wcf.acp.option.annoy_slow_min.description"><![CDATA[The function "Slow Motion" extended the time to load pages for user. Sets a time, in seconds, the user must wait at least. 0 = deactivated]]></item>
+		<item name="wcf.acp.option.annoy_slow_max"><![CDATA[Maximum delay "Slow Motion"]]></item>
+		<item name="wcf.acp.option.annoy_slow_max.description"><![CDATA[The function "Slow Motion" extended the time to load pages for user. Sets a maximum time, in seconds, the user must wait. 0 = deactivated]]></item>
+		<item name="wcf.acp.option.annoy_blank_percentage"><![CDATA[Function "Snow Storm"]]></item>
+		<item name="wcf.acp.option.annoy_blank_percentage.description"><![CDATA[The function "Snow Storm" shows the user a blank page. "Frequency in percent", 0 = deactivated.]]></item>
+		<item name="wcf.acp.option.annoy_logout_percentage"><![CDATA[Function "Damn Cookies!"]]></item>
+		<item name="wcf.acp.option.annoy_logout_percentage.description"><![CDATA[The function "Damn Cookies!" logs user randomly out. "Frequency in percent", 0 = deactivated.]]></item>
+		<item name="wcf.acp.option.annoy_redirect_percentage"><![CDATA[Function "The Link is broken, dude!"]]></item>
+		<item name="wcf.acp.option.annoy_redirect_percentage.description"><![CDATA[The function "The Link is broken, dude!" guides the user directly back to the index page. "Frequency in percent", 0 = deactivated.]]></item>
+		<item name="wcf.acp.option.annoy_gzip_percentage"><![CDATA[Function "Holy Crap!"]]></item>
+		<item name="wcf.acp.option.annoy_gzip_percentage.description"><![CDATA[The function "Holy Crap!" shows the user requested pages in hilarious Hieroglyphs. "Frequency in percent", 0 = deactivated.]></item>
 	</category>
 </language>
